--- a/first-react-app/src/components/Body/Body.css
+++ b/first-react-app/src/components/Body/Body.css
@@ -103,3 +103,20 @@
     transform: scale(0.75);
   }
 }
+
+.form {
+  background-color: #fff;
+  width: 400px;
+  height: 70px;
+  text-align: center;
+  margin: auto;
+}
+
+.form input {
+  width: 250px;
+  height: 50px;
+  margin: 7px;
+}
+.inputParagraph {
+  color: white;
+}
