--- a/resume-app/src/App.css
+++ b/resume-app/src/App.css
@@ -2,14 +2,53 @@
   background: #eee;
 }
 .can-edit {
-  color: black;
-  font-size: 15px;
-  font-weight: 700;
+  color: gray;
 }
 .only-text {
   background: transparent;
   border: 0;
-  color: black;
-  font-size: 15px;
+  color: white;
+}
+.add-btn {
+  display: inline-block;
+  border: 2px solid black;
+  border-radius: 50%;
   font-weight: 700;
+}
+
+.comp {
+  font-size: 30px;
+  color: #555;
+  line-height: 30px;
+}
+.title {
+  font-size: 24px;
+  line-height: 24px;
+  color: #888;
+}
+.exp {
+  border-bottom: 2px solid #888;
+  padding-bottom: 20px;
+}
+.exp input,
+textarea {
+  border-radius: 5px;
+  border: 2px solid #888;
+  margin: 5px 0;
+}
+.exp .only-text {
+  color: black;
+}
+.exp textarea {
+  height: 150px;
+  width: 300px;
+}
+.del-btn {
+  float: right;
+  border-radius: 2px;
+  width: 40px;
+  height: 40px;
+  background: #dba59c;
+  color: #962a2a;
+  margin-top: -50px;
 }
